<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_title" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/toolbar_division"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/my_toolbar"
        android:layout_marginBottom="10dp"
        android:background="@color/colorDivision"
        android:orientation="horizontal" />

    <!-- Contents -->
    <ImageView
        android:id="@+id/addphoto_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toolbar_division"
        android:layout_margin="8dp"
        tools:src="@drawable/ic_account" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_division"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/addphoto_image">

        <EditText
            android:id="@+id/addphoto_edit_explain"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:hint="@string/hint_image_content"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/addphoto_btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/addphoto_image"
        android:text="@string/upload_image"
        android:theme="@style/ButtonStyle" />

</RelativeLayout>
